<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ui.add_meeting.AddMeetingFragment">


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newMeeting_Name"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/textView2"

            android:hint="@string/Topic"
            app:helperText="required">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newMeeting_Place"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/newMeeting_Name"


            android:hint="@string/Place"
            app:helperText="required">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newMeeting_Time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/newMeeting_Place"


            android:hint="@string/Time"
            app:helperText="required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:inputType="datetime">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newMeeting_Participants"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newMeeting_Time"


            android:hint="@string/Participants_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_Participant"
                android:layout_width="213dp"
                android:layout_height="50dp"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_add_meeting"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_below="@+id/newMeeting_Participants"
            android:layout_alignParentStart="true"
            android:layout_marginStart="235dp"
            android:layout_marginTop="22dp"
            android:background="@android:color/holo_red_dark"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:text="   SAVE MEETING      "
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/button_add_participant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="6dp"
            android:drawableStart="@drawable/ic_person_add_white_24dp"
            android:text="  ADD PARTICIPANT" />

        <TextView
            android:id="@+id/display_participant_list_text_view"
            android:layout_width="192dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="236dp"
            android:text="@string/Participants_list" />


    </RelativeLayout>
</FrameLayout>
