...
        android:layout_marginLeft="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/nameInput"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"


            android:ems="10"
...
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="Place" />

        <ImageButton
            android:id="@+id/item_list_delete_button"
            android:layout_width="27dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_weight="0

"
...
